--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <input type="text" id="searchBar" placeholder="Search notes...">
     <button id="addNoteBtn">+ Add Note</button>
     <button id="addCategoryBtn">+ Add Category</button>
+    <select id="filterPinned">
+      <option value="all">All Notes</option>
+      <option value="pinned">Pinned Only</option>
+    </select>
   </header>
 
   <div class="container">
@@ -35,9 +39,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
-</body>
-</html>
   <script src="script.js"></script>
 </body>
 </html>
