--- a/note.html
+++ b/note.html
@@ -5,22 +5,135 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edit Note</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f5f5dc;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
+      background: #4F000B;
+      color: #f5f5dc;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      margin: 0;
+    }
+
+    main {
+      flex: 1;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    input, textarea, select {
+      width: 100%;
+      padding: 0.5rem;
+      border-radius: 5px;
+      border: 1px solid #4F000B;
+      font-size: 1rem;
+    }
+
+    textarea {
+      min-height: 300px;
+      resize: vertical;
+    }
+
+    button {
+      background: #720026;
+      color: #f5f5dc;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 0.5rem;
+    }
+
+    button:hover {
+      background: #4F000B;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Edit Note</h1>
-    <button id="returnHomeBtn">Return to Home</button>
+    <button id="backHomeBtn">Return Home</button>
   </header>
 
   <main>
-    <div class="note-editor">
-      <input type="text" id="noteTitle" placeholder="Title">
-      <textarea id="noteContent" placeholder="Content"></textarea>
-      <select id="noteCategory"></select>
-      <button id="saveNoteBtn">Save</button>
-    </div>
+    <input type="text" id="noteTitle" placeholder="Title">
+    <textarea id="noteContent" placeholder="Content"></textarea>
+    <select id="noteCategory"></select>
+    <button id="saveNoteBtn">Save Note</button>
   </main>
 
-  <script src="note.js"></script>
+  <script>
+    const noteTitle = document.getElementById("noteTitle");
+    const noteContent = document.getElementById("noteContent");
+    const noteCategorySelect = document.getElementById("noteCategory");
+    const saveNoteBtn = document.getElementById("saveNoteBtn");
+    const backHomeBtn = document.getElementById("backHomeBtn");
+
+    let notes = JSON.parse(localStorage.getItem("notes")) || [];
+    let categories = JSON.parse(localStorage.getItem("categories")) || ["Home"];
+    const currentNote = JSON.parse(localStorage.getItem("currentNote"));
+    const index = currentNote?.index;
+
+    // Populate note and category
+    if (currentNote) {
+      noteTitle.value = currentNote.title;
+      noteContent.value = currentNote.content;
+    }
+
+    function updateCategories() {
+      noteCategorySelect.innerHTML = "";
+      categories.forEach(cat => {
+        const opt = document.createElement("option");
+        opt.value = cat;
+        opt.textContent = cat;
+        noteCategorySelect.appendChild(opt);
+      });
+      if (currentNote) noteCategorySelect.value = currentNote.category;
+    }
+
+    updateCategories();
+
+    // Save Note
+    saveNoteBtn.addEventListener("click", () => {
+      const updatedNote = {
+        title: noteTitle.value.trim(),
+        content: noteContent.value.trim(),
+        category: noteCategorySelect.value,
+        id: currentNote.id
+      };
+
+      if (!updatedNote.title && !updatedNote.content) return;
+
+      if (index !== undefined) {
+        notes[index] = updatedNote;
+      } else {
+        notes.push(updatedNote);
+      }
+
+      localStorage.setItem("notes", JSON.stringify(notes));
+      alert("Note saved!");
+    });
+
+    // Return Home
+    backHomeBtn.addEventListener("click", () => {
+      window.location.href = "index.html";
+    });
+  </script>
 </body>
 </html>
