--- a/index.html
+++ b/index.html
@@ -1,145 +1,221 @@
-const addNoteBtn = document.getElementById("addNoteBtn");
-const addCategoryBtn = document.getElementById("addCategoryBtn");
-const homeBtn = document.getElementById("homeBtn");
-const noteModal = document.getElementById("noteModal");
-const categoryModal = document.getElementById("categoryModal");
-const closeNoteModal = document.querySelector(".close");
-const closeCatModal = document.querySelector(".catClose");
-const saveNoteBtn = document.getElementById("saveNoteBtn");
-const saveCategoryBtn = document.getElementById("saveCategoryBtn");
-const noteTitle = document.getElementById("noteTitle");
-const noteContent = document.getElementById("noteContent");
-const noteCategory = document.getElementById("noteCategory");
-const notesList = document.getElementById("notesList");
-const categoryList = document.getElementById("categoryList");
-const newCategoryInput = document.getElementById("newCategoryInput");
-const searchBar = document.getElementById("searchBar");
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Notes</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f5f5dc;
+    }
 
-let notes = JSON.parse(localStorage.getItem("notes")) || [];
-let categories = JSON.parse(localStorage.getItem("categories")) || ["Home"];
-let currentCategory = "Home";
+    header {
+      background: #4F000B;
+      color: #f5f5dc;
+      padding: 1rem;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
 
-/* ====== RENDER FUNCTIONS ====== */
-function renderCategories() {
-  categoryList.innerHTML = "";
-  categories.forEach((cat) => {
-    const li = document.createElement("li");
-    li.textContent = cat;
-    if (cat === currentCategory) li.classList.add("active");
+    header h1 {
+      flex: 1;
+      margin: 0;
+    }
 
-    const delBtn = document.createElement("button");
-    delBtn.textContent = "×";
-    delBtn.classList.add("deleteCatBtn");
-    delBtn.onclick = (e) => {
-      e.stopPropagation();
-      if (confirm(`Are you sure you want to delete category "${cat}"?`)) {
-        categories = categories.filter((c) => c !== cat);
-        localStorage.setItem("categories", JSON.stringify(categories));
-        if (currentCategory === cat) currentCategory = "Home";
-        renderCategories();
-        renderNotes();
-      }
-    };
+    header input {
+      padding: 0.4rem;
+      border-radius: 5px;
+      border: none;
+      flex: 2;
+    }
 
-    li.onclick = () => {
-      currentCategory = cat;
-      renderCategories();
-      renderNotes();
-      homeBtn.style.display = cat !== "Home" ? "inline-block" : "none";
-    };
+    header div button {
+      padding: 0.4rem 0.8rem;
+      background: #720026;
+      color: #f5f5dc;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
-    li.appendChild(delBtn);
-    categoryList.appendChild(li);
-  });
-  localStorage.setItem("categories", JSON.stringify(categories));
-}
+    header div button:hover {
+      background: #4F000B;
+    }
 
-function renderNotes() {
-  notesList.innerHTML = "";
-  let filtered = notes.filter(
-    (n) =>
-      (currentCategory === "Home" || n.category === currentCategory) &&
-      n.title.toLowerCase().includes(searchBar.value.toLowerCase())
-  );
+    .container {
+      display: flex;
+      min-height: calc(100vh - 70px);
+    }
 
-  filtered.forEach((note) => {
-    const div = document.createElement("div");
-    div.classList.add("note");
-    div.innerHTML = `<h3>${note.title}</h3><p>${note.content}</p>`;
+    aside {
+      width: 180px;
+      background: #4F000B;
+      color: #f5f5dc;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+    }
 
-    const delBtn = document.createElement("button");
-    delBtn.textContent = "×";
-    delBtn.classList.add("deleteBtn");
-    delBtn.onclick = (e) => {
-      e.stopPropagation();
-      if (confirm(`Are you sure you want to delete note "${note.title}"?`)) {
-        notes = notes.filter((n) => n !== note);
-        localStorage.setItem("notes", JSON.stringify(notes));
-        renderNotes();
-      }
-    };
+    #categoryList {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
 
-    div.appendChild(delBtn);
-    notesList.appendChild(div);
-  });
-}
+    #categoryList li {
+      padding: 0.4rem;
+      margin-bottom: 0.3rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+      border-radius: 4px;
+    }
 
-/* ====== MODALS ====== */
-addNoteBtn.onclick = () => {
-  noteModal.style.display = "flex";
-  noteTitle.value = "";
-  noteContent.value = "";
-  noteCategory.innerHTML = categories.map(
-    (c) => `<option value="${c}">${c}</option>`
-  ).join("");
-};
+    #categoryList li.active, #categoryList li:hover {
+      background: #720026;
+    }
 
-addCategoryBtn.onclick = () => {
-  categoryModal.style.display = "flex";
-  newCategoryInput.value = "";
-};
+    .deleteCatBtn {
+      background: #f5f5dc;
+      color: #720026;
+      border: none;
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+      font-size: 12px;
+      line-height: 16px;
+      cursor: pointer;
+    }
 
-closeNoteModal.onclick = () => (noteModal.style.display = "none");
-closeCatModal.onclick = () => (categoryModal.style.display = "none");
+    main {
+      flex: 1;
+      padding: 1rem;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
 
-window.onclick = (e) => {
-  if (e.target === noteModal) noteModal.style.display = "none";
-  if (e.target === categoryModal) categoryModal.style.display = "none";
-};
+    .note {
+      background: #fff;
+      padding: 0.8rem;
+      border-radius: 5px;
+      border-left: 5px solid #4F000B;
+      width: 200px;
+      cursor: pointer;
+      position: relative;
+    }
 
-saveNoteBtn.onclick = () => {
-  const note = {
-    title: noteTitle.value.trim(),
-    content: noteContent.value.trim(),
-    category: noteCategory.value,
-  };
-  if (!note.title || !note.content) return alert("Please fill out all fields");
-  notes.push(note);
-  localStorage.setItem("notes", JSON.stringify(notes));
-  renderNotes();
-  noteModal.style.display = "none";
-};
+    .note h3 {
+      margin: 0 0 0.5rem 0;
+      color: #4F000B;
+    }
 
-saveCategoryBtn.onclick = () => {
-  const cat = newCategoryInput.value.trim();
-  if (!cat) return alert("Enter a category name");
-  if (categories.includes(cat)) return alert("Category already exists");
-  categories.push(cat);
-  renderCategories();
-  categoryModal.style.display = "none";
-};
+    .note p {
+      margin: 0;
+      font-size: 0.9rem;
+      color: #333;
+    }
 
-/* ====== SEARCH BAR ====== */
-searchBar.oninput = () => renderNotes();
+    .deleteBtn {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      background: #720026;
+      color: #f5f5dc;
+      border: none;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+    }
 
-/* ====== HOME BUTTON ====== */
-homeBtn.onclick = () => {
-  currentCategory = "Home";
-  renderCategories();
-  renderNotes();
-  homeBtn.style.display = "none";
-};
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
+    }
 
-/* ====== INIT ====== */
-renderCategories();
-renderNotes();
+    .modal-content {
+      background: #f5f5dc;
+      padding: 1rem;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      width: 300px;
+      position: relative;
+    }
+
+    .modal-content input, .modal-content textarea, .modal-content select {
+      padding: 0.4rem;
+      border-radius: 4px;
+      border: 1px solid #4F000B;
+      width: 100%;
+    }
+
+    .modal-content button {
+      background: #4F000B;
+      color: #f5f5dc;
+      border: none;
+      padding: 0.5rem;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .modal-content button:hover {
+      background: #720026;
+    }
+
+    .close {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      color: #720026;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>My Notes</h1>
+    <input type="text" id="searchBar" placeholder="Search notes...">
+    <div>
+      <button id="addNoteBtn">+ Add Note</button>
+      <button id="addCategoryBtn">+ Add Category</button>
+    </div>
+  </header>
+
+  <div class="container">
+    <aside>
+      <ul id="categoryList"></ul>
+    </aside>
+    <main>
+      <div id="notesList"></div>
+    </main>
+  </div>
+
+  <div id="noteModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <input type="text" id="noteTitle" placeholder="Title">
+      <textarea id="noteContent" placeholder="Content"></textarea>
+      <select id="noteCategory"></select>
+      <button id="saveNoteBtn">Save Note</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
