--- a/index.html
+++ b/index.html
@@ -59,6 +59,34 @@
       padding: 1rem;
       display: flex;
       flex-direction: column;
+      gap: 0.5rem;
+    }
+
+    /* Add Category Input + Button */
+    .add-category {
+      display: flex;
+      flex-direction: column;
+      gap: 0.3rem;
+      margin-bottom: 1rem;
+    }
+
+    .add-category input {
+      padding: 0.4rem;
+      border-radius: 5px;
+      border: none;
+    }
+
+    .add-category button {
+      padding: 0.4rem 0.8rem;
+      background: #720026;
+      color: #f5f5dc;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .add-category button:hover {
+      background: #4F000B;
     }
 
     #categoryList {
@@ -193,12 +221,15 @@
     <input type="text" id="searchBar" placeholder="Search notes...">
     <div>
       <button id="addNoteBtn">+ Add Note</button>
-      <button id="addCategoryBtn">+ Add Category</button>
     </div>
   </header>
 
   <div class="container">
     <aside>
+      <div class="add-category">
+        <input type="text" id="newCategoryInput" placeholder="New category name...">
+        <button id="addCategoryBtn">+ Add Category</button>
+      </div>
       <ul id="categoryList"></ul>
     </aside>
     <main>
@@ -215,6 +246,10 @@
       <button id="saveNoteBtn">Save Note</button>
     </div>
   </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
   <script src="script.js"></script>
 </body>
