--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <aside>
       <div class="add-category">
         <input type="text" id="newCategoryInput" placeholder="New category name...">
-        <button id="addCategoryBtn">+ Add Category</button>
+        <button id="addCategoryBtn" type="button">+ Add Category</button>
       </div>
       <ul id="categoryList"></ul>
     </aside>
@@ -246,10 +246,6 @@
       <button id="saveNoteBtn">Save Note</button>
     </div>
   </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
 
   <script src="script.js"></script>
 </body>
